2010-06-18

	* libsylph/pop.c
	  libsylph/session.c: protect against session->sock == NULL
	  (fixes crash on cancel).

2010-06-17

	* libsylph/prefs_common.h
	  src/compose.c
	  src/main.c: made user-agent string configurable from plug-ins.

2010-06-15

	* version 3.1.0beta1

2010-06-15

	* src/libsylpheed-plugin-0.def: updated.

2010-06-15

	* src/addr_compl.c: removed debug print.

2010-06-11

	* src/plugin.c
	  src/folderview.c: fixed syl_plugin_folderview_add_sub_widget().
	* plugin/test/test.c: added syl_plugin_folderview_add_sub_widget()
	  test.

2010-06-11

	* src/plugin.[ch]
	  src/main.c
	  src/folderview.[ch]: added plug-in APIs for folder view.
	  Added folderview_add_sub_widget() which adds sub widget under
	  folder view.

2010-06-11

	* src/action.c: reset signal handlers of child process to prevent
	  app_will_exit() called on SIGTERM.
	  Added debug output.

2010-06-10

	* src/folderview.[ch]: put vbox on the top of folder view.

2010-06-09

	* src/action.c: prevent double free when using %f.
	  Obtain thread lock in gdk_input_add() callbacks.

2010-06-07

	* libsylph/prefs_common.[ch]
	  src/addr_compl.c
	  src/prefs_common_dialog.c: made the old behavior of address
	  completion configurable.

2010-06-05

	* src/addr_compl.c: replace_address_in_edit(): fixed infinite loop
	  on completion start with GTK+ 2.18+.

2010-06-04

	* src/addr_compl.c: implemented real automatic address completion.

2010-06-03

	* src/quick_search.c: suppress filter debug output.

2010-06-02

	* libsylph/filter.c: added debug log for filter.

2010-06-01

	* src/summaryview.c: modified 'Go to next folder' dialog description.

2010-05-31

	* src/plugin.[ch]
	  src/main.c: added some functions for FolderView.

2010-05-28

	* src/update_check.c: support DISP_RELEASE / DISP_DEVEL which
	  set displayed new version.

2010-05-28

	* src/update_check.[ch]
	  src/plugin.[ch]
	  src/main.c: added functions to modify URLs for update check.

2010-05-27
