@@ -10,7 +10,7 @@ MICRO_VERSION=0
 INTERFACE_AGE=0
 BINARY_AGE=0
 EXTRA_VERSION=beta1
-BUILD_REVISION=1006
+BUILD_REVISION=1100
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION$EXTRA_VERSION
 
 dnl define if this is a development release
@@ -40,9 +40,12 @@ fi
 
 dnl libtool versioning
 LT_RELEASE=$MAJOR_VERSION.$MINOR_VERSION
-LT_CURRENT=`expr 1 + $MICRO_VERSION - $INTERFACE_AGE`
-LT_REVISION=$INTERFACE_AGE
-LT_AGE=`expr $BINARY_AGE - $INTERFACE_AGE`
+dnl LT_CURRENT=`expr 1 + $MICRO_VERSION - $INTERFACE_AGE`
+dnl LT_REVISION=$INTERFACE_AGE
+dnl LT_AGE=`expr $BINARY_AGE - $INTERFACE_AGE`
+LT_CURRENT=2
+LT_REVISION=0
+LT_AGE=1
 AC_SUBST(LT_RELEASE)
 AC_SUBST(LT_CURRENT)
 AC_SUBST(LT_REVISION)
