@@ -676,3 +676,4 @@ EXPORTS
 	imap_msg_list_set_colorlabel_flags @ 674
 	filter_get_addressbook_func @ 675
 	filter_set_addressbook_func @ 676
+	procmsg_flaginfo_list_free @ 677
