@@ -1036,12 +1036,17 @@ static gboolean hash_remove_func(gpointer key, gpointer value, gpointer data)
 static void inc_update_folderview(IncProgressDialog *inc_dialog,
 				  IncSession *inc_session)
 {
+	MainWindow *mainwin;
+
 	if (g_hash_table_size(inc_session->tmp_folder_table) > 0) {
 		folderview_update_item_foreach(inc_session->tmp_folder_table,
 					       FALSE);
 		g_hash_table_foreach_remove(inc_session->tmp_folder_table,
 					    hash_remove_func, NULL);
 	}
+
+	mainwin = main_window_get();
+	summary_show_queued_msgs(mainwin->summaryview);
 }
 
 static void inc_progress_dialog_update_periodic(IncProgressDialog *inc_dialog,
