@@ -1,3 +1,10 @@
+2010-06-30
+
+	* libsylph/procmsg.[ch]
+	  src/inc.c
+	  src/summaryview.[ch]: update summary view on receiving on the fly.
+	* configure.in: updated/fixed libtool version.
+
 2010-06-18
 
 	* libsylph/pop.c
